# LightsOut

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
LightsOut/: CMakeLists.txt  LightsOut.cpp  LightsOut.h  MainGame.cpp  MainGame.h
src/: AudioTestComponent.cpp  CMakeLists.txt  Component.cpp  ComponentRef.cpp  EntityRef.cpp  Events.cpp  Game.cpp  LightsOut.cpp  Main.cpp  MainGame.cpp  MainLoop.cpp  MainLoop.h  PrinterComponent.cpp  RenderComponent.cpp  RendererComponent.cpp  Setup.cpp  SquareRenderComponent.cpp  Utils.cpp  macros.h  reflection_body.h  reflection_test.cpp  reflector.h
src/components/: AudioTestComponent.cpp  PrinterComponent.cpp  SquareRenderComponent.cpp
src/engine/: AudioEngine.cpp  AudioPlayer.cpp  AudioTrack.cpp  Component.cpp  ComponentRef.cpp  EntityRef.cpp  Events.cpp  RenderComponent.cpp
src/include/: AudioTestComponent.h  Component.h  ComponentKey.h  ComponentList.h  ComponentMeta.h  ComponentRef.h  EntityControlBlock.h  EntityRef.h  Events.h  Game.h  MainLoop.h  PrinterComponent.h  RenderComponent.h  RendererComponent.h  ResizeMode.h  Setup.h  SquareRenderComponent.h  TylerDoesntLikeTheGameClass.h  Utils.h
src/include/components/: AudioTestComponent.h  PrinterComponent.h  SquareRenderComponent.h
src/include/engine/: AudioEngine.h  AudioPlayer.h  AudioTrack.h  Component.h  ComponentMeta.h  ComponentRef.h  EntityRef.h  Events.h  RenderComponent.h  Renderable.h  ResizeMode.h
src/include/systems/: AudioSystem.h  RenderSystem.h
src/systems/: AudioSystem.cpp  RenderSystem.cpp
